<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Bitcoin Trader Zf</string>
  <string name="empty"></string>

  <string name="loading_info">Loading&#8230;</string>
  <string name="connecting_info">Connecting&#8230;</string>
  <string name="connection_failed">Could not connect. Please check your internet connection and try again.</string>
  <string name="bitcoin_order_fragment_empty_text">No Open Orders.</string>
  <string name="bitcoin_action_buy">Buy</string>
  <string name="bitcoin_action_sell">Sell</string>
  <string name="bitcoin_action_demo_info">End demo</string>
  <string name="button_retry">Retry</string>
  <string name="button_delete_order_text">Do you really want to delete the following order:\n%1$s (amount: %2$s)</string>
  <string name="button_delete_order_confirm">Confirm</string>
  <string name="button_delete_order_cancel">Cancel</string>
  
  <string name="order_deleted">Order deleted successfully</string>
  <string name="order_delete_failed">Order deletion failed</string>

  <string name="initial_setup_headline">Initial Setup</string>
  <string name="initial_setup_info_text">To be able to use this app, you have to connect it to your Zaif.jp account.\nThere are two possibilities available which you can find in the \"Account\" - \"API Key\" on Zaif.jp (<a href="https://zaif.jp/api_keys">https://zaif.jp/api_keys</a>).\nIn both cases you need to set the \"Info\" and \"Trade\" permission.</string>
  <string name="initial_setup_manual_qrinfo">Click the QR code to scan your \"application access\" key</string>
  <string name="initial_setup_manual_info">Or input the keypair generated with \"advanced api key generation\"</string>
  <string name="initial_setup_manual_setupbutton">Go</string>
  <string name="initial_setup_manual_key_label">Key</string>
  <string name="initial_setup_manual_secretkey_label">Secret key</string>
  <string name="initial_setup_demo_label">If you are not sure, if this is the right app for you, you can start a demo here.</string>
  <string name="initial_setup_demo_button">Start demo</string>
  <string name="initial_setup_demo">Starting Demo</string>
  <string name="initial_setup_success">Setup completed for username %s</string>
  <string name="initial_setup_testing">Testing credentials</string>
  <string name="initial_setup_failed_wrong_credentials">Seems to be wrong credentials</string>
  <string name="initial_setup_failed_key_expired">Key expired.</string>
  <string name="initial_setup_failed_key_invalid">Key invalid.</string>
  <string name="initial_setup_failed_not_enough_permissions">Not enough permissions.</string>
  
  <string name="wallet_history_title">Wallet History</string>
  <string name="wallet_history_currency_spinner_label">Select Currency:</string>
  <string name="wallet_history_out">Out</string>
  <string name="wallet_history_in">In</string>
  <string name="wallet_history_fee">Fee</string>
  <string name="wallet_history_earned">Earned</string>
  <string name="wallet_history_spent">Spent</string>
  <string name="wallet_history_withdraw">Withdraw</string>
  <string name="wallet_history_deposit">Deposit</string>
  <string name="wallet_history_balance">Balance:</string>
  <string name="wallet_history_date">Date:</string>
  <string name="wallet_history_price">Price:</string>
  <string name="wallet_history_info_bought">BTC bought: %1$s at %2$s</string>
  <string name="wallet_history_info_sold">BTC sold: %1$s at %2$s</string>

  <string name="price_chart_title">Price Chart</string>
  <string name="price_chart_symbol">Symbol</string>
  <string name="price_chart_low">Low</string>
  <string name="price_chart_high">High</string>
  <string name="price_chart_last">Last</string>
  <string name="price_chart_vol">Vol</string>
  <string name="price_chart_avg">Avg</string>
  <string name="price_chart_ask">Ask</string>
  <string name="price_chart_bid">Bid</string>
  <string name="price_chart_failed">Could not load pricechart data from bitcoincharts.com. This should be a temporary problem</string>
  <string name="price_chart_title_zf">Price Chart Zaif</string>
    
  <string name="account_info">Your Account</string>
  <string name="account_info_trade_fee_label">Trade Fee:</string>
  <string name="price_info">Ticker</string>
  <string name="price_info_low_label">Low: </string>
  <string name="price_info_high_label">High: </string>
  <string name="price_info_ask_label">Ask: </string>
  <string name="price_info_bid_label">Bid: </string>
  <string name="price_info_volume_label">Volume: </string>
  <string name="refresh_title">Refresh</string>

  <string name="price_chart_detail_title">Price Chart Details</string>
  <string name="price_chart_detail_open_in_new_window">Open in Browser</string>

  <string name="select_currency_title">Select currency</string>

  <string name="notify_order_executed_title">Orders executed</string>
  <string name="notify_order_executed_text">An order has been executed at %1$s (%2$s for %3$s)</string>
  <string name="notify_update_success_text">Update successful!</string>
  <string name="notify_update_failed_title">Update failed!</string>
  <string name="notify_update_failed_text">There has been an error</string>

  <string name="placeorder_title">Place Order</string>
  <string name="place_order_fragment_type_label">Ordertype</string>
  <string name="place_order_fragment_amount_label">Amount</string>
  <string name="place_order_fragment_market_order">Market Order</string>
  <string name="place_order_fragment_price_label">Price</string>
  <string name="place_order_fragment_total_label">Total</string>
  <string name="place_order_fragment_estimatedfee_label">Estimated Fee</string>
  <string name="place_order_perform">Place Order</string>
  <string name="place_order_cancel">Cancel</string>
  <string name="place_order_submitting">Submitting Order</string>
  <string name="place_order_invalid">Please validate your input</string>
  <string name="place_order_success">Order created</string>
  <string name="place_order_failed">Could not create order</string>
  <string name="place_order_failed_demo">You cannot create orders in demo mode.</string>


  <string name="market_depth_title">Market Depth</string>
  <string name="market_depth_asks_graph_title">Asks</string>
  <string name="market_depth_bids_graph_title">Bids</string>
    
  <string name="about_title">About</string>
  <string name="about_author_twitter_title">Author at Twitter</string>
  <string name="about_license">License</string>
  <string name="about_license_summary">This app is distributed under GPLv3 License</string>
  <string name="about_credits_bitcoinwallet_title">"This app is using 'bitcoin-wallet'"</string>
  <string name="about_credits_xchange_title">"This app is using 'xchange'"</string>
  <string name="about_credits_zxing_title">"This app is using 'zxing'"</string>
  <string name="about_credits_graphview_title">"This app is using 'graphview'"</string>
    
  <string name="preferences_title">Settings</string>
  <string name="preferences_category_mtgox">Zaif.jp</string>
  <string name="preferences_mtgox_api_key_summary">Your Zaif.jp API key</string>
  <string name="preferences_mtgox_api_key_title">API key</string>
  <string name="preferences_mtgox_secret_key_summary">Your Zaif.jp Secret key</string>
  <string name="preferences_mtgox_secret_key_title">Secret key</string>
  <string name="preferences_category_labs">Labs</string>
  <string name="preferences_category_general">General Settings</string>
  <string name="preferences_general_update_summary">Please set value</string>
  <string name="preferences_general_update_title">Automatically update every&#8230;</string>
  <string name="preferences_general_notify_on_update_summary">Notify even if update was successful</string>
  <string name="preferences_general_notify_on_update_title">Notify on success</string>
  <string name="preferences_general_sound_title">Play Sound</string>
  <string name="preferences_general_sound_summary">Plays a sound if a notification is created.</string>
  <string name="preferences_general_vibrate_title">Vibration</string>
  <string name="preferences_general_vibrate_summary">Vibrate if a notification is created.</string>
  <string name="preferences_trailing_stop_enable_selling_title">Sell on loss stop limit</string>
  <string name="preferences_trailing_stop_enable_selling_summary">Sell if trailing stop limit is reached.</string>
  <string name="preferences_delete_account_title">Delete Account</string>
  <string name="preferences_delete_account_summary">Delete Account from this app (not from Zaif.jp!)</string>
  <string name="preferences_labs">Here be dragons!!!</string>
  <string name="preferences_debug_title">Debug</string>
  <string name="preferences_debug_summary">Enables debug options</string>
    
  <string name="bitcointrader_options_donate">Donate</string>
  <string name="bitcointrader_options_help">Help</string>

  <string name="report_issue_dialog_title_crash">Previous crash detected</string>
  <string name="report_issue_dialog_message_crash">Would you like to send a crash report, helping to fix this issue in the future?</string>
  <string name="report_issue_dialog_description">Issue description</string>
  <string name="report_issue_dialog_report">Report</string>
  <string name="report_issue_dialog_collect_device_info">Append device information</string>
  <string name="report_issue_dialog_collect_application_log">Append application log</string>
  <string name="report_issue_dialog_mail_intent_chooser">Send report using…</string>

  <string name="button_cancel">Cancel</string>
	
  <string name="widget_accountinfo_name">Bitcoin Trader Account Info</string>
  <string name="widget_priceinfo_name">Bitcoin Trader Price Info</string>
  
  <string name="trailing_stop_loss_title">Trailing Stop Loss</string>
  <string name="trailing_stop_activate_stop_loss">Activate Stop-Loss</string>
  <string name="trailing_stop_cancel_stop_loss">Cancel Stop-Loss (%2$s, %1$s</string>
  <string name="trailing_stop_loss_description">Place your stop loss here</string>
  <string name="trailing_stop_loss_perform">Activate</string>
  <string name="trailing_stop_loss_wrong_input">Please validate your input</string>
  <string name="trailing_stop_loss_submitted">Trailing stop loss has been created.</string>
  <string name="trailing_stop_loss_price_description">Threshold for trailing stop loss</string>
  <string name="trailing_stop_loss_percentage_description">Percentage to adjust threshold</string>
  <string name="trailing_stop_loss_updates_description">Number of updates before notification appears or threshold is adjusted.</string>
  <string name="trailing_stop_notify_title">A trailing stop loss point has been reached.</string>
  <string name="trailing_stop_notify_text">There has been an automatic sold of bitcoins at %1$s (your limit was %2$s).</string>
  <string name="trailing_stop_alignment_notify_title">Your trailing stop price limit has been set to a new value</string>
  <string name="trailing_stop_alignment_notify_text">As the stock price has gone up, your trailing stop price limit has changed from %1$s to %2$s.</string>
  <string name="capital_ask">ASK</string>
  <string name="capital_bid">BID</string>
  <string name="preferences_warning">Warning</string>
  <string name="developed_by">Developed by</string>
  <string name="version">Version</string>
  <string name="contribution">Contribution</string>
  <string name="specialthanks">Special Thanks</string>
  
  <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9209419102968336/5111200008</string>
  <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-9209419102968336/7907838403</string>
  
</resources>
