<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

  <PreferenceCategory android:title="@string/preferences_category_mtgox" >
    <EditTextPreference
      android:key="zaif_apikey"
      android:title="@string/preferences_mtgox_api_key_title" />
    />
    <EditTextPreference
      android:key="zaif_secretkey"
      android:title="@string/preferences_mtgox_secret_key_title"
      android:summary="@string/preferences_mtgox_secret_key_summary"
    />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/preferences_category_general">
    <ListPreference
      android:title="@string/preferences_general_update_title"
      android:summary="@string/preferences_general_update_summary"
      android:key="general_update"
      android:entries="@array/listUpdateWord"
      android:entryValues="@array/listUpdateValue" />
    <CheckBoxPreference
      android:title="@string/preferences_general_notify_on_update_title"
      android:defaultValue="false"
      android:summary="@string/preferences_general_notify_on_update_summary"
      android:key="general_notify_on_update" />
      <CheckBoxPreference
        android:title="@string/preferences_general_vibrate_title"
        android:defaultValue="false"
        android:summary="@string/preferences_general_vibrate_summary"
        android:key="general_vibrate" />
      <CheckBoxPreference
        android:title="@string/preferences_general_sound_title"
        android:defaultValue="false"
        android:summary="@string/preferences_general_sound_summary"
        android:key="general_sound" />
      <Preference
      android:key="delete_account"
      android:title="@string/preferences_delete_account_title"
      android:summary="@string/preferences_delete_account_summary"/>
  </PreferenceCategory>
  
  <PreferenceCategory android:title="@string/preferences_category_labs" >
    <Preference
      android:icon="@drawable/ic_menu_warning"
      android:summary="@string/preferences_labs"
      android:title="@string/preferences_warning" />
    <CheckBoxPreference
      android:key="trailing_stop_selling_enabled"
      android:defaultValue="false"
      android:title="@string/preferences_trailing_stop_enable_selling_title" 
      android:summary="@string/preferences_trailing_stop_enable_selling_summary" 
    />
    <CheckBoxPreference
      android:key="debug"
      android:defaultValue="false"
      android:title="@string/preferences_debug_title"
      android:summary="@string/preferences_debug_summary"
    />
  </PreferenceCategory>

</PreferenceScreen>