<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

  <PreferenceCategory android:title="@string/about_title" >
    <Preference
      android:key="about_version"
      android:title="@string/version" />
    <Preference
      android:key="about_author"
      android:summary="Naofumi"
      android:title="@string/developed_by" />
    <!-- Preference
      android:key="about_author_twitter"
      android:summary="\@deveth0"
      android:title="@string/about_author_twitter_title" / -->
    <Preference
        android:key="specialthanks"
        android:summary="Alexander Muthmann"
        android:title="@string/specialthanks" />
    <Preference
      android:key="contribution"
      android:summary="Daniel Kaminski de Souza"
      android:title="@string/contribution" />
    <Preference
      android:key="about_license"
      android:summary="@string/about_license_summary"
      android:title="@string/about_license" />
    <Preference
      android:key="about_credits_xchange"
      android:title="@string/about_credits_xchange_title" />
    <Preference
      android:key="about_credits_bitcoinwallet"
      android:title="@string/about_credits_bitcoinwallet_title" />
    <Preference
      android:key="about_credits_zxing"
      android:title="@string/about_credits_zxing_title" />
    <Preference
      android:key="about_credits_graphview"
      android:title="@string/about_credits_graphview_title" />
    <!-- Preference
      android:key="about_donate"
      android:title="@string/bitcointrader_options_donate" / -->
  </PreferenceCategory>

</PreferenceScreen>