<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_padding"
    android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
    android:layout_marginRight="@dimen/list_entry_padding_horizontal"
    android:paddingBottom="@dimen/default_padding"
    android:orientation="horizontal">

    <TextView
      android:layout_height="fill_parent"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:text="@string/price_chart_symbol" />

    <TextView
      android:layout_height="fill_parent"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:gravity="center_horizontal"
      android:text="@string/price_chart_last"
    />        
    <TextView
      android:layout_height="fill_parent"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:gravity="center_horizontal"
      android:text="@string/price_chart_vol"/>

    <TextView
      android:layout_height="fill_parent"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:gravity="center_horizontal"
      android:text="@string/price_chart_low" />

    <TextView
      android:layout_height="fill_parent"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:gravity="center_horizontal"
      android:text="@string/price_chart_high"/>

  </LinearLayout>
  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:foreground="@drawable/fragment_shadow_horizontal_light"
    android:foregroundGravity="top|fill_horizontal" >
    <ListView
      android:id="@android:id/list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    />
  </FrameLayout>

</LinearLayout>