<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/chart_row_info_toast"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="@drawable/custom_toast_style"
              android:orientation="vertical"
>
  
  
  <TextView
    android:id="@+id/chart_row_info_toast_symbol"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="@color/orange"
    android:textStyle="bold"
    android:textSize="@dimen/font_size_xlarge" 
  />
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
  >
    
    <LinearLayout 
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginRight="@dimen/default_padding"
    >
    
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_last"
        android:textSize="@dimen/font_size_normal"
      />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_avg"
        android:textSize="@dimen/font_size_normal"
      />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_vol"
        android:textSize="@dimen/font_size_normal"
      />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_low"
        android:textSize="@dimen/font_size_normal"
      />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_high"
        android:textSize="@dimen/font_size_normal"
      />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_bid"
        android:textSize="@dimen/font_size_normal"
      />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_chart_ask"
        android:textSize="@dimen/font_size_normal"
      />
    </LinearLayout>
  
    <LinearLayout 
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:orientation="vertical"
    >
      <de.dev.eth0.bitcointrader.ui.views.CurrencyTextView
        android:id="@+id/chart_row_info_toast_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />        
      <de.dev.eth0.bitcointrader.ui.views.CurrencyTextView
        android:id="@+id/chart_row_info_toast_avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />
      <de.dev.eth0.bitcointrader.ui.views.AmountTextView
        android:id="@+id/chart_row_info_toast_vol"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />
      <de.dev.eth0.bitcointrader.ui.views.CurrencyTextView
        android:id="@+id/chart_row_info_toast_low"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />
      <de.dev.eth0.bitcointrader.ui.views.CurrencyTextView
        android:id="@+id/chart_row_info_toast_high"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />
      <de.dev.eth0.bitcointrader.ui.views.CurrencyTextView
        android:id="@+id/chart_row_info_toast_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />
      <de.dev.eth0.bitcointrader.ui.views.CurrencyTextView
        android:id="@+id/chart_row_info_toast_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_normal"
      />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>